[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["MelekhSV <melex.1998@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
makefile = "^1.1.0"
flake8 = "^4.0.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
